<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".PaymentOptionsFragment">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/_16dp">

        <EditText
            android:id="@+id/merchantId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/merchant_id"
            android:scrollHorizontally="true"
            android:singleLine="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_16sp"
                android:text="@string/select_the_environment"/>

            <Spinner
                android:id="@+id/environment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_8dp"
                android:entries="@array/spinner_environment_items"/>
        </LinearLayout>

        <Button
            android:id="@+id/initSdk"
            android:layout_width="@dimen/_200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/init_sdk"/>

        <EditText
            android:id="@+id/savedInstrumentsToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/saved_instruments_token"
            android:scrollHorizontally="true"
            android:singleLine="true"/>

        <Button
            android:id="@+id/getInstruments"
            android:layout_width="@dimen/_200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/get_instruments"/>

        <Button
            android:id="@+id/link"
            android:layout_width="@dimen/_200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/link"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/orderToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_token"
            android:scrollHorizontally="true"
            android:singleLine="true"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/savedInstrumentsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <Button
            android:id="@+id/pay"
            android:layout_width="@dimen/_200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>